--- a/BurglaryPreUnityLoader.csproj
+++ b/BurglaryPreUnityLoader.csproj
@@ -62,6 +62,10 @@
     <Reference Include="Normcore">
       <HintPath>D:\SteamLibrary\steamapps\common\The Break-In\nonVR\The Break In_Data\Managed\Normcore.dll</HintPath>
     </Reference>
+    <Reference Include="Rewired_Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\SteamLibrary\steamapps\common\The Break-In\nonVR\The Break In_Data\Managed\Rewired_Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
